[package]
name = "dungeon-keeper"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
pathfinding = "4.2.1"
bevy_egui = "0.19"
noise = "0.8"
rand = "0.8.5"
log = "0.4"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
